# ngsapps

./: CMakeLists.txt  README.md  bleb.py  bleb_implicit.py  bleb_paramtest.py  bleb_semiexplicit.py  cahnhilliard.py  crossdiff_paramtest.py  crossdiffusion.py  crossdiffusion_cg.py  crowdedtransport.py  generalsurfbulk.py  limiter_test.py  nonlocaldiff.py  precip_draw_ic.py  precip_fdm.py  precip_fdm2d.py  precip_fem.py  precip_vis.py  precip_vis2d.py  surfacebulk.py
activeparticles/: README.md  continuum.py  continuum_topf.py  continuum_vis.py  oned.py  sde.py  settings.py
bleb/: bleb_paramtest.py  bleb_semiexplicit.py
crossdiffusion/: cgform.py  crossdiff_paramtest.py  crossdiffusion.py  crossdiffusion_cg.py  dgform.py  formulation.py  geometries.py  limiter.py  plottool.py  schelling.py  schelling2.py  schelling_1species.py  stationary.py
data/crossdiff/: ents_1_0.15_1000.csv  ents_1_0.15_20.csv  ents_1_0.1_110.csv  ents_1_0.1_20.csv  ents_1_0.1_50.csv  ents_1_0.3_20.csv  ents_1_0.3_50.csv  (+11 more)
hughesopt/: DGForms.py  README.md  hughes_opt.py  hughes_opt_alex.py  hughes_opt_working.py  hughes_reg_cg.py  opt_viewer.py  rungekutta.py
latex/: FEM_Nonlinear.tex  crossdg.bib
nonlocal/: kerneltest.py  nonlocaldiff.py  nonlocaldiff_periodic.py  periodic2d.py  testperiodic.py
precip/: precip_fdm.py  precip_vis2d.py
py_demos/: compose.py  convolve.py  convtest.py  poisson.py
transportlimiter/: DGForms.py  hughes_opt.py  hughes_opt_alex.py  hughes_reg.py  limiter.py  linear_upw.py  ng.ini  nonlin_ldg.py  nonlin_upw.py  opt_viewer.py  plotting.py
utils/: CMakeLists.txt  annulusspeedcf.cpp  annulusspeedcf.hpp  cachecf.cpp  cachecf.hpp  composecf.cpp  composecf.hpp  convolutioncf.cpp  convolutioncf.hpp  eikonal.cpp  eikonal.hpp  lagrangefe.cpp  lagrangefe.hpp  lagrangefespace.cpp  lagrangefespace.hpp  limiter.cpp  limiter.hpp  limiter.py  merge_meshes.py  meshtools.py  myvtkoutput.cpp  myvtkoutput.hpp  parameterlf.cpp  parameterlf.hpp  plotting.py  randomcf.cpp  randomcf.hpp  simple.pde  utils.cpp  utils.hpp  utils.py  utils_python.cpp  zlogzcf.cpp  zlogzcf.hpp
(+555 files in other folders)
